--- a/index.html
+++ b/index.html
@@ -10,7 +10,35 @@
 <body>
     <section id="main">
         <section class="section1">
-
+            <div class="div-titlu">
+                <h4>Orarul Cursurilor</h4>
+            </div>
+            <div class="div-buttons">
+                <button id="active-button">Grupe</button>
+                <button>Profesori</button>
+                <button>Aule</button>
+            </div>
+            <input type="text" placeholder="Inserati numele Grupei"></input>
+            <select class="select-grupa" Name="Grupe" Size="4">  
+                <option> IT11Z </option>  
+                <option> MI11Z </option>  
+                <option> IS11z </option>  
+                <option> SP12M </option>
+                <option> SP21M </option>  
+                <option> SP22M </option>  
+                <option> TI11M </option>  
+                <option> TI21M </option>   
+            </select>   
+            <select class="select-ziua" name="Ziua">
+                <option disabled selected hidden>Alege Ziua</option>
+                <option>Luni</option>
+                <option>Marti</option>
+                <option>Miercuri</option>
+                <option>Joi</option>
+                <option>Vineri</option>
+                <option>Sambata</option>
+                <option>Duminica</option>
+              </select>
         </section>
         <section class="section2">
 
