final version of selectors

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <button>Aule</button>
             </div>
             <input type="text" placeholder="Inserati numele Grupei"></input>
-            <select class="select-grupa" Name="Grupe" Size="4">  
+            <select class="select-grupa" name="Grupe" size="4">  
                 <option> IT11Z </option>  
                 <option> MI11Z </option>  
                 <option> IS11z </option>  
@@ -29,7 +29,7 @@
                 <option> TI11M </option>  
                 <option> TI21M </option>   
             </select>   
-            <select class="select-ziua" name="Ziua">
+            <select class="select-hide" name="Ziua">
                 <option disabled selected hidden>Alege Ziua</option>
                 <option>Luni</option>
                 <option>Marti</option>
@@ -38,7 +38,23 @@
                 <option>Vineri</option>
                 <option>Sambata</option>
                 <option>Duminica</option>
-              </select>
+            </select>
+            <select class="select-hide" name="Saptamana">
+                <option disabled selected hidden>Alege Ziua</option>
+                <option>1 (30.8.2021 - 5.9.2021)</option>
+                <option>2 (6.9.2021 - 12.9.2021)</option>
+                <option>3 (13.9.2021 - 19.9.2021)</option>
+                <option>4 (20.9.2021 - 26.9.2021)</option>
+                <option>5 (27.9.2021 - 3.10.2021)</option>
+                <option>6 (4.10.2021 - 10.10.2021)</option>
+                <option>7 (11.10.2021 - 17.10.2021)</option>
+            </select>
+            <select class="select-hide" name="Semestru">
+                <option disabled selected hidden>Alege Semestrul</option>
+                <option>1</option>
+                <option>2</option>
+            </select>
+
         </section>
         <section class="section2">
 
