tabelul dint stanga jos

--- a/index.html
+++ b/index.html
@@ -54,7 +54,74 @@
                 <option>1</option>
                 <option>2</option>
             </select>
-
+            <div class="div-tabel">
+                <div class="tabel-dates"></div>
+                <div class="tabel-dates">1</div>
+                <div class="tabel-dates">2</div>
+                <div class="tabel-dates">3</div>
+                <div class="tabel-dates">4</div>
+                <div class="tabel-dates">5</div>
+                <div class="tabel-dates">6</div>
+                <div class="tabel-dates">7</div>
+                <div class="tabel-dates">L - 15</div>
+                <div class="BP">P</div>
+                <div class="AG">L</div>
+                <div class=""></div>
+                <div class=""></div>
+                <div class="EG">P</div>
+                <div class=""></div>
+                <div class=""></div>
+                <div class="tabel-dates">Ma - 16</div>
+                <div class=""></div>
+                <div class=""></div>
+                <div class=""></div>
+                <div class=""></div>
+                <div class=""></div>
+                <div class=""></div>
+                <div class=""></div>
+                <div class="tabel-dates">Mi - 17</div>
+                <div class=""></div>
+                <div class=""></div>
+                <div class=""></div>
+                <div class=""></div>
+                <div class=""></div>
+                <div class=""></div>
+                <div class=""></div>
+                <div class="tabel-dates">J - 18</div>
+                <div class=""></div>
+                <div class=""></div>
+                <div class=""></div>
+                <div class=""></div>
+                <div class=""></div>
+                <div class=""></div>
+                <div class=""></div>
+                <div class="tabel-dates">V - 19</div>
+                <div class=""></div>
+                <div class=""></div>
+                <div class=""></div>
+                <div class=""></div>
+                <div class=""></div>
+                <div class=""></div>
+                <div class=""></div>
+                <div class="tabel-dates">S - 20</div>
+                <div class=""></div>
+                <div class=""></div>
+                <div class=""></div>
+                <div class=""></div>
+                <div class=""></div>
+                <div class=""></div>
+                <div class=""></div>
+                <div class="tabel-dates">D - 21</div>
+                <div class=""></div>
+                <div class=""></div>
+                <div class=""></div>
+                <div class=""></div>
+                <div class=""></div>
+                <div class=""></div>
+                <div class=""></div>
+                
+                
+            </div>
         </section>
         <section class="section2">
 
