tabel jos stanga update

--- a/index.html
+++ b/index.html
@@ -55,70 +55,70 @@
                 <option>2</option>
             </select>
             <div class="div-tabel">
-                <div class="tabel-dates"></div>
-                <div class="tabel-dates">1</div>
-                <div class="tabel-dates">2</div>
-                <div class="tabel-dates">3</div>
-                <div class="tabel-dates">4</div>
-                <div class="tabel-dates">5</div>
-                <div class="tabel-dates">6</div>
-                <div class="tabel-dates">7</div>
-                <div class="tabel-dates">L - 15</div>
-                <div class="BP">P</div>
-                <div class="AG">L</div>
-                <div class=""></div>
-                <div class=""></div>
-                <div class="EG">P</div>
-                <div class=""></div>
-                <div class=""></div>
-                <div class="tabel-dates">Ma - 16</div>
-                <div class=""></div>
-                <div class=""></div>
-                <div class=""></div>
-                <div class=""></div>
-                <div class=""></div>
-                <div class=""></div>
-                <div class=""></div>
-                <div class="tabel-dates">Mi - 17</div>
-                <div class=""></div>
-                <div class=""></div>
-                <div class=""></div>
-                <div class=""></div>
-                <div class=""></div>
-                <div class=""></div>
-                <div class=""></div>
-                <div class="tabel-dates">J - 18</div>
-                <div class=""></div>
-                <div class=""></div>
-                <div class=""></div>
-                <div class=""></div>
-                <div class=""></div>
-                <div class=""></div>
-                <div class=""></div>
-                <div class="tabel-dates">V - 19</div>
-                <div class=""></div>
-                <div class=""></div>
-                <div class=""></div>
-                <div class=""></div>
-                <div class=""></div>
-                <div class=""></div>
-                <div class=""></div>
-                <div class="tabel-dates">S - 20</div>
-                <div class=""></div>
-                <div class=""></div>
-                <div class=""></div>
-                <div class=""></div>
-                <div class=""></div>
-                <div class=""></div>
-                <div class=""></div>
-                <div class="tabel-dates">D - 21</div>
-                <div class=""></div>
-                <div class=""></div>
-                <div class=""></div>
-                <div class=""></div>
-                <div class=""></div>
-                <div class=""></div>
-                <div class=""></div>
+                <div id="tabel-dates"></div>
+                <div id="tabel-dates">1</div>
+                <div id="tabel-dates">2</div>
+                <div id="tabel-dates">3</div>
+                <div id="tabel-dates">4</div>
+                <div id="tabel-dates">5</div>
+                <div id="tabel-dates">6</div>
+                <div id="tabel-dates">7</div>
+                <div id="tabel-dates">L - 15</div>
+                <div id="lection">P</div>
+                <div id="lection">L</div>
+                <div></div>
+                <div></div>
+                <div id="lection">P</div>
+                <div></div>
+                <div></div>
+                <div id="tabel-dates">Ma - 16</div>
+                <div id="lection">L</div>
+                <div id="lection">L</div>
+                <div id="lection">L</div>
+                <div></div>
+                <div id="lection">EP</div>
+                <div></div>
+                <div></div>
+                <div id="tabel-dates">Mi - 17</div>
+                <div id="lection">L</div>
+                <div id="lection">L</div>
+                <div id="lection">L</div>
+                <div id="lection">S</div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div id="tabel-dates">J - 18</div>
+                <div id="lection">S</div>
+                <div id="lection">L</div>
+                <div id="lection">L</div>
+                <div id="lection">L</div>
+                <div id="lection">EP</div>
+                <div></div>
+                <div></div>
+                <div id="tabel-dates">V - 19</div>
+                <div id="lection">P</div>
+                <div id="lection">EP</div>
+                <div id="lection">L</div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div id="tabel-dates">S - 20</div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div id="tabel-dates">D - 21</div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
                 
                 
             </div>
