--- a/index.html
+++ b/index.html
@@ -119,8 +119,17 @@
                 <div></div>
                 <div></div>
                 <div></div>
-                
-                
+            </div>
+            <div class="tabel-info">
+                <span>P - Prelegere</span>
+                <span>S - Seminar</span>
+                <span>L - Laborator</span>
+                <span>PC - Proiect de Curs</span>
+                <br>
+                <span>EP - Evaluare periodică</pspan>
+                <span>C - Consultație</span>
+                <span>E - Examinare</span>
+                <span>R - Reexaminare</span>
             </div>
         </section>
         <section class="section2">
