--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <section id="main">
         <section class="section1">
             <div class="div-titlu">
-                <h4>Orarul Cursurilor</h4>
+                <h4>
+                    Orarul Cursurilor
+                </h4>
             </div>
             <div class="div-buttons">
                 <button id="active-button">Grupe</button>
@@ -133,7 +135,95 @@
             </div>
         </section>
         <section class="section2">
-
+            <img src="assets/img/logo_usarb_new.png" alt="USARB logo">
+            <h4>
+                UNIVERSITATEA DE STAT „ALECU RUSSO” DIN BĂLȚI
+            </h4>
+            <div class="lections-tabel">
+                <div class="lt-rows">
+                    <div class="lt-column1">
+                        <span></span>
+                        <span>8:00<br>9:30</span>
+                        <span></span>
+                    </div>
+                    <div class="lt-column2">
+                        <p><strong>Matematica I</strong></p>
+                        <p>Seminar</p>
+                        <p>prof. Ciobanu I.</p>
+                        <p><strong>videoconferință</strong></p>
+                    </div>
+                </div>
+                <div class="lt-rows">
+                    <div class="lt-column1">
+                        <span></span>
+                        <span>9:45<br>11:15</span>
+                        <span></span>
+                    </div>
+                    <div class="lt-column2">
+                        <p><strong>Proiectarea paginilor WEB</strong></p>
+                        <p>Laborator</p>
+                        <p>asist. univ.Chilat S.</p>
+                        <p><strong>videoconferință</strong></p>
+                    </div>
+                </div>
+                <div class="lt-rows">
+                    <div class="lt-column1">
+                        <span></span>
+                        <span>11:30<br>13:00</span>
+                        <span></span>
+                    </div>
+                    <div class="lt-column2">
+                        <p><strong>Bazele programării I</strong></p>
+                        <p>Laborator</p>
+                        <p>asist. univ.Gorea A.</p>
+                        <p><strong>videoconferință</strong></p>
+                    </div>
+                </div>
+                <div class="lt-rows">
+                    <div class="lt-column1">
+                        <span></span>
+                        <span>13:15<br>14:45</span>
+                        <span></span>
+                    </div>
+                    <div class="lt-column2">
+                        <p><strong>Limba engleză I</strong></p>
+                        <p>Laborator</p>
+                        <p>asist. univ.L. Coșulean</p>
+                        <p><strong>videoconferință</strong></p>
+                    </div>
+                </div>
+                <div class="lt-rows">
+                    <div class="lt-column1">
+                        <span></span>
+                        <span>15:00<br>16:30</span>
+                        <span></span>
+                    </div>
+                    <div class="lt-column2">
+                        <p><strong>Aplicații generice</strong></p>
+                        <p>Evaluare periodică</p>
+                        <p>asist. univ.Skutniţki O.</p>
+                        <p><strong>videoconferință</strong></p>
+                    </div>
+                </div>
+                <div class="lt-rows">
+                    <div class="lt-column1">
+                        <span></span>
+                        <span>16:45<br>18:15</span>
+                        <span></span>
+                    </div>
+                    <div class="lt-column2">
+                    </div>
+                </div>
+                <div class="lt-rows">
+                    <div class="lt-column1">
+                        <span></span>
+                        <span>18:30<br>20:00</span>
+                        <span></span>
+                    </div>
+                    <div class="lt-column2">
+                    </div>
+                </div>
+            </div>
         </section>
     </section>
 </body>
