mini-bag resolve

--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
                 <option>Duminica</option>
             </select>
             <select class="select-hide" name="Saptamana">
-                <option disabled selected hidden>Alege Ziua</option>
+                <option disabled selected hidden>Alege Saptamana</option>
                 <option>1 (30.8.2021 - 5.9.2021)</option>
                 <option>2 (6.9.2021 - 12.9.2021)</option>
                 <option>3 (13.9.2021 - 19.9.2021)</option>
